--- a/문서 작성.md
+++ b/문서 작성.md
@@ -1,10 +1,17 @@
-# 작성 중
-[완료] 3-3 젠킨스 깃허브 연동(webhook/ credentials)   
-[진행중] 3-4 명령어 설치(kubectl / podman)
+<details>
+<summary> # 작성 완료 </summary>
+  
+[완료] 3-3 젠킨스 깃허브 연동(webhook/ credentials)  
+[완료] 3-4 명령어 설치(kubectl / podman)
+
+</details>
 
 ---
 
 # 3. Jenkins를 사용한 파이프라인 구축
+<details>
+<summary> 접기 / 펼치기 </summary>
+  
 ## 3-3 젠킨스 깃허브 연동(webhook/ credentials)   
 - #### Jenkins와 github를 연동하여 github에서 push 될 때, 자동으로 Jenkins에서 빌드가 실행되는 환경을 만드는 작업이다.
 ###  3-3-1 github 토큰 발급
@@ -41,7 +48,20 @@
   - GitHub Hook Log 메뉴에서 github push 이벤트 발생 유무 확인 가능
     ![image](https://github.com/mnh4140/paasta/assets/71053769/040761c1-a7b3-4b5c-ac3a-8f9caa6d4d6b)
     ![image](https://github.com/mnh4140/paasta/assets/71053769/4937a91d-2f2b-4d38-b0af-377fe81be88d)
-
+</details>
 
 
 ## 3-4 명령어 설치(kubectl / podman)
+#### 아래의 URL 참고 
+https://www.lesstif.com/container/podman-98926748.html
+- Ubuntu 20.10 이상부터는 podman 명령어를 apt-get으로 설치가 가능하다.
+- PaaS-TA는 Ubuntu 20.04 OS를 사용하여, 아래의 스크립트로 kubic 저장소를 등록하고 podman 을 설치 진행
+  ``` bash
+  . /etc/os-release
+  echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /" | sudo tee etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
+  curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/Release.key | sudo apt-key add -
+  sudo apt-get update
+  sudo apt-get -y upgrade
+  sudo apt-get -y install podman
+  ```
+
